--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -12,14 +12,14 @@
         <div class="contact">
 
           {{ content }}
-          {% include contact-icons.html %}
+        <!--  {% include contact-icons.html %} -->
 
         </div>
       </div>
     </main>
 
-    {% include footer.html %}
-
+   <!-- {% include footer.html %} -->
+			{% include contact-icons.html %}
 
   </body>
 
