--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
   {% include head.html %}
@@ -22,5 +23,5 @@
 			{% include contact-icons.html %}
 
   </body>
-
+{% seo %}
 </html>
