--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -3,7 +3,10 @@
    ========================================================================== */
 
 .masthead {
-  position: relative;
+  position: -webkit-sticky; /* Safari */
+  position: sticky;
+  top: 0;
+  background-color: white;
   border-bottom: 1px solid $border-color;
   -webkit-animation: $intro-transition;
   animation: $intro-transition;
@@ -15,7 +18,7 @@
     @include clearfix;
     margin-left: auto;
     margin-right: auto;
-    padding: 1em;
+    padding: 0em;
     max-width: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -40,7 +43,7 @@
 }
 
 .site-logo img {
-  max-height: 2rem;
+  max-height: 1rem;
 }
 
 .site-title {
